<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuIntro"
        android:icon="@drawable/ic_arrow_right_24"
        android:title="@string/bankIntro"/>

    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_arrow"
        android:title="@string/share"/>


    <item
        android:id="@+id/menuLoan"
        android:icon="@drawable/ic_arrow_right_24"
        android:title="@string/loanProduct"
        />

    <item
        android:id="@+id/menuDeposit"
        android:icon="@drawable/ic_arrow_right_24"
        android:title="@string/depositProduct"/>


    <item
        android:id="@+id/menuMission"
        android:icon="@drawable/ic_arrow_right_24"
        android:title="@string/missionVission"/>

    <item
        android:id="@+id/menuOffice"
        android:icon="@drawable/ic_arrow"
        android:title="@string/office"/>

    <item
        android:id="@+id/menuContact"
        android:icon="@drawable/ic_arrow"
        android:title="@string/contact"/>

    <item
        android:id="@+id/menuFaqs"
        android:icon="@drawable/ic_arrow"
        android:title="@string/faqs"/>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/ic_arrow"
                android:title="@string/settings"
                />
            <item
                android:id="@+id/menuEmail"
                android:icon="@drawable/ic_arrow"
                android:title="@string/email"
                />
            <item
                android:id="@+id/menuWeb"
                android:icon="@drawable/ic_arrow"
                android:title="@string/website"
                />
        </menu>
    </item>

</menu>